--- a/action.yml
+++ b/action.yml
@@ -475,9 +475,9 @@ runs:
                 if [ -n "${{ inputs.dir-tree-file }}" ]; then
                   DIR_TREE_PATH="$OUTER_BUILD_DIR/${{ inputs.dir-tree-file }}"
                   if command -v tree &> /dev/null; then
-                    tree "$OUTER_BUILD_DIR" > "$DIR_TREE_PATH"
+                    (cd "$OUTER_BUILD_DIR" && tree -a -F . | sed '1s/^\./\//') > "$DIR_TREE_PATH"
                   else
-                    find "$OUTER_BUILD_DIR" -type f | sort > "$DIR_TREE_PATH"
+                    find "$OUTER_BUILD_DIR" -type f | sed "s|^$OUTER_BUILD_DIR|/|" | sort > "$DIR_TREE_PATH"
                   fi
                   echo "dir_tree_path=$DIR_TREE_PATH" >> $GITHUB_OUTPUT
                 fi
